# STEP-BY-STEP

./: AGENTS.md  Fortschritt.txt  README.md  bootstrap.sh  info.txt  json-and-more.info.txt  pyproject.toml  requirements-dev.txt  requirements.txt  start_tool.py  todo.txt
.github/workflows/: ci.yml
data/: archive.json  color_audit.json  diagnostics_report.json  persistent_notes.txt  playlists.json  release_checklist.json  security_manifest.json  selftest_report.json  settings.json  todo_items.json  usage_stats.json
docs/: coding_guidelines.md  dependency_update.md  onboarding.md  post_release_ideas.md  release_checklist.md  release_status.md
packaging/: install_desktop.sh  step-by-step.desktop
step_by_step/: __init__.py  __main__.py
step_by_step/cli/: __init__.py  reporting.py  runner.py
step_by_step/core/: __init__.py  color_audit.py  config_manager.py  defaults.py  dependency_manager.py  diagnostics.py  file_utils.py  log_reader.py  logging_manager.py  resources.py  security.py  startup.py  themes.py  validators.py
step_by_step/modules/: __init__.py
step_by_step/modules/audio/: __init__.py  module.py
step_by_step/modules/database/: __init__.py  module.py
step_by_step/modules/release/: __init__.py  module.py
step_by_step/modules/todo/: __init__.py  module.py
step_by_step/ui/: __init__.py  info_panels.py  main_window.py  widgets.py
tests/: test_cli_reporting.py  test_config_manager.py  test_dependency_manager.py  test_file_utils.py  test_startup_dependencies.py
